crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__parses_basic_attrs.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 20,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [
                        KeyValue(
                            "attr1",
                            Some(
                                Literal(
                                    "hello",
                                ),
                            ),
                        ),
                    ],
                    children: [],
                },
            ),
        },
    ],
    script: None,
}
