crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__reports_invalid_closing_tag_angle_bracket.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 6,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [],
                },
            ),
        },
    ],
    script: None,
    css: None,
}
