crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__reports_unmatched_tag_errors.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 12,
            },
            node_type: Error,
        },
    ],
    script: None,
}
